--- a/dbench.yaml
+++ b/dbench.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: dbench
-        image: longhornio/dbench:latest
+        image: baowj/dbench:arm64
         imagePullPolicy: Always
         securityContext:
           # Need this for fio be able to invalid the cache
